- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    5.0.0 Beta 1
- 
    Windows 7
- 
        f4fb6abcc5bda601881b846613eb882b5a2db94d
Event entries are not getting generated to IDL files of activeQt servers. Works in Qt4.
Seems that the issue stems from the fact that "void" return type is now correctly returned as such when queried from QMetaMethod::typeName(). This also causes a bunch of warnings from QVariant at runtime: "Trying to create a QVariant instance of QMetaType::Void type, an invalid QVariant will be constructed instead".
- is required for
- 
                    QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module -         
- Closed
 
-