Fix signals to COM events conversion

Events were not generated to IDL files for signals of activeQt servers,
because QMetaMethod::typeName() now properly returns "void" instead of
empty stringfor methods with void return type. The same issue was
present in few other places in code, so fixed those as well.

Also fixed incorrect use of return type instead of parameter type
where signal paremeters were converted to event parameters in
QAxServerBase::qt_metacall(). Previously this bug has gone unnoticed as
"type" has typically been empty in this case, which does the default
conversion based on QVariant type.

Task-number: QTBUG-26411
Change-Id: I3684805bc900d3cad6fbcc8ccabbb3ecac120092
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>