src/activeqt/control/qaxserverbase.cpp
@@ -2027,13 +2027,13 @@ int QAxServerBase::qt_metacall(QMetaObject::Call call, int index, void **argv)
                         }
                     }
 
-                    QVariantToVARIANT(variant, *arg, type, out);
+                    QVariantToVARIANT(variant, *arg, ptype, out);
                 }
 
                 VARIANT retval;
                 VariantInit(&retval);
                 VARIANT *pretval = 0;
-                if (!type.isEmpty())
+                if (!type.isEmpty() && type != QStringLiteral("void"))
                     pretval = &retval;
 
                 // call listeners (through IDispatch)
@@ -2466,7 +2466,7 @@ HRESULT WINAPI QAxServerBase::Invoke(DISPID dispidMember, REFIID riid,
 	    }
 
             // return value
-	    if (!type.isEmpty()) {
+        if (!type.isEmpty() && type != QStringLiteral("void")) {
                 QVariant::Type vt = QVariant::nameToType(type);
                 if (vt == QVariant::UserType)
                     vt = QVariant::Invalid;
@@ -2504,7 +2504,7 @@ HRESULT WINAPI QAxServerBase::Invoke(DISPID dispidMember, REFIID riid,
 			    ok = false;
 		    }
 		}
-                if (!type.isEmpty() && pvarResult) {
+                if (!type.isEmpty() && type != QStringLiteral("void") && pvarResult) {
                     if (!varp[0].isValid() && type != "QVariant")
                         varp[0] = QVariant(QMetaType::type(type), argv_pointer);
 //                        varp[0].setValue(argv_pointer[0], type);
